Bug fix for footer
- footer was overlapping with text of article posts when the page gets
long, and the buttons were unclickable.
- To fix, I added padding to the bottom of the `container` class
- I also added some additional styling to add padding to the top of the
footer so that the text was not flush up against the top

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,8 +17,11 @@
 
  .container {
    background-color: #f6fbfc;
+   padding-bottom: 60px;
  }
 footer {
+  background-color: #ccc;
   padding-bottom: 30px;
+  padding-top: 30px;
   text-align: center;
 }
